cambiata modale scelta lookup persona, abbozzate modali scelta eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -228,6 +228,7 @@ label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
+label.attuazione_evento=Attuazione
 label.avanti=avanti
 label.azioni=Azioni
 label.benvenuto=Benvenuto
@@ -282,6 +283,7 @@ label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
 label.crea_account=Crea Account
+label.creazione_evento=Creazione
 label.creazione_nuovo_evento=Creazione nuovo evento
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
@@ -478,6 +480,8 @@ label.lista_allegati=Lista degli allegati del provider {0}
 label.lista_anni_selezionabili=Lista degli anni selezionabili
 label.lista_comunicazioni_tipo=Lista delle Comunicazioni {0}
 label.lista_domande_da_valutare=Domande da valutare
+label.lista_eventi=Lista degli Eventi
+label.lista_eventi_provider=Lista degli Eventi del Provider {0}
 label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.lista_referee=Lista dei Referee
@@ -567,6 +571,7 @@ label.nuova_domanda_standard=Nuova domanda Standard
 label.nuova_password=Nuova Password
 label.nuova_risposta=Nuova Risposta
 label.nuovo=Nuovo
+label.nuovo_evento=Nuovo Evento
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
@@ -652,6 +657,7 @@ label.richiesta_standard_accreditamento=Richiesta di accreditamento Standard
 label.richieste_accreditamento=Richieste di accreditamento
 label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
+label.riedizione_evento=Riedizione
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_evento=Riepilogo dell''Evento {0}
 label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
@@ -667,7 +673,10 @@ label.rivaluta=Rivaluta
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
+label.scelta_evento_piano_formativo=Scelta Evento del Piano Formativo da attuare
+label.scelta_evento_riedizione=Scelta Evento da rieditare
 label.scelta_modalita=Scelta della modalità di inserimento
+label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
 label.scheda_provider=Scheda provider
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
@@ -833,10 +842,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.lista_eventi=Lista degli Eventi
-label.lista_eventi_provider=Lista degli Eventi del Provider {0}
-label.nuovo_evento=Nuovo Evento
-label.creazione_evento=Creazione
-label.attuazione_evento=Attuazione
-label.riedizione_evento=Riedizione
-label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
