--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -672,6 +672,7 @@ label.risposta_del_provider=Risposta del Provider
 label.rivaluta=Rivaluta
 label.ruolo=Ruolo
 label.salva=Salva
+label.scadenza_valutazione=Data scadenza Valutazione
 label.scegli_file=Scegli file
 label.scelta_evento_piano_formativo=Scelta Evento del Piano Formativo da attuare
 label.scelta_evento_riedizione=Scelta Evento da rieditare
