Modifiche alle entity Evento, EventoPianoFormativo per gestione Eventi
WORK IN PROGRESS
modifiche importanti: modificato il repository di Evento e
EventoPianoFormativo a JpaRepository per avere il flush in modo da
salvare e subito dopo chiamare il buildPrefix.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -284,7 +284,6 @@ label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
 label.crea_account=Crea Account
 label.creazione_evento=Creazione
-label.creazione_nuovo_evento=Creazione nuovo evento
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
@@ -843,3 +842,10 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
+label.salva_modifiche=Salva Modifiche
+label.conferma_evento=Conferma Evento
+label.denominazione_legale_provider=Denominazione Legale del Provider
+label.id_provider=Id del Provider
+label.evento_contiene_questi_contenuti=L'evento formativo prevedere i seguenti contenuti?
+label.codice_identificativo=Codice Identificativo
