--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -173,6 +173,7 @@ error.username.duplicated=username già registrato nel sistema
 error.xml_validation=Errore di validazione dell'XML
 error._free_msg={0}
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
+error.xml_evento_validation_with_db=Validazione dati evento fallita
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
