--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -170,6 +170,9 @@ error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
+error.xml_validation=Errore di validazione dell'XML
+error._free_msg={0}
+error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
@@ -632,7 +635,7 @@ label.relazione_annuale=Relazione Annuale
 label.rendiconto=Rendiconto
 label.reportPartecipanti=Report Partecipanti
 label.reportPartecipantiCSV=File CSV caricato
-label.reportPartecipantiXML=File XML generato
+label.reportPartecipantiXML=File XML
 label.required_fatturato=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato soprastanti)
 label.required_fatturato_personale_sanitario=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato del personale sanitario nella sezione Dati Accreditamento)
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
