Evento salvataggio (new) w.i.p

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -849,3 +849,10 @@ label.denominazione_legale_provider=Denominazione Legale del Provider
 label.id_provider=Id del Provider
 label.evento_contiene_questi_contenuti=L'evento formativo prevedere i seguenti contenuti?
 label.codice_identificativo=Codice Identificativo
+label.informazioni_sede=Informazioni relative alla Sede dell'Evento
+label.luogo=Luogo
+message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
+label.data_inizio=Data inizio
+label.data_fine=Data fine
+label.date_intermedie=Date intermedie
+label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
