--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -859,3 +859,9 @@ label.data_inizio=Data inizio
 label.data_fine=Data fine
 label.date_intermedie=Date intermedie
 label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
+label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
+label.titolo_convegno=Titolo del Convegno
+label.numero_partecipanti=Numero dei partecipanti
+label.responsabili_scientifici=Responsabili scientifici
+label.docenti_relatori_tutor=Docenti/Relatori/Tutor
+label.programma_attivita_formativa=Programma attività formativa
