--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -864,4 +864,6 @@ label.titolo_convegno=Titolo del Convegno
 label.numero_partecipanti=Numero dei partecipanti
 label.responsabili_scientifici=Responsabili scientifici
 label.docenti_relatori_tutor=Docenti/Relatori/Tutor
-label.programma_attivita_formativa=Programma attività formativa
+label.programma_attività_formativa=Programma attività formativa
+label.razionale=Razionale
+label.risultati_attesi=Risultati attesi
