--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -868,3 +868,15 @@ label.docenti_relatori_tutor=Docenti/Relatori/Tutor
 label.programma_attività_formativa=Programma attività formativa
 label.razionale=Razionale
 label.risultati_attesi=Risultati attesi
+label.brochure_evento=Brochure dell'evento
+label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
+label.durata=Durata
+label.tipologia_obiettivi_formativi=Tipologia di obiettivi formativi
+label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
+label.responsabile_segreteria_organizzativa=Responsabile segreteria organizzativa
+label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
+label.quota_partecipazione=Quota di partecipazione
+label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
+label.lingua_straniera_utilizzata=Lingua straniera utilizzata
+label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
+label.verifica_presenza_partecipanti=Verifica presenza partecipanti
