--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -127,12 +127,14 @@ engineering.dati_inseriti=File inseriti con successo
 engineering.engineering=Engineering
 engineering.test_firma=Test Firma
 engineering.test_mypay=Test MyPay
+error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
+error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
 error.email.duplicated=email già registrata nel sistema
@@ -170,10 +172,8 @@ error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
-error.xml_validation=Errore di validazione dell'XML
-error._free_msg={0}
-error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.xml_evento_validation_with_db=Validazione dati evento fallita
+error.xml_validation=Errore di validazione dell'XML
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
@@ -225,6 +225,7 @@ label.aperta=Aperta
 label.applica=Applica
 label.apri_tutte=Apri tutte
 label.archivia=Archivia
+label.argomento=Argomento
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovi Referee
 label.assegna_stesso_gruppo=Fai valutare Integrazione
@@ -240,6 +241,7 @@ label.benvenuto_provider=Benvenuto {0}!
 label.blocca_seduta=Blocca Seduta
 label.bloccata=Bloccata
 label.bloccate=Bloccate
+label.brochure_evento=Brochure dell'evento
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
@@ -263,6 +265,7 @@ label.chiuse_comunicazione_messaggio={0} Comunicazioni chiuse
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
+label.codice_identificativo=Codice Identificativo
 label.cogeaps=Co.Ge.A.P.S.
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
@@ -279,6 +282,7 @@ label.comunicazioni=Comunicazioni
 label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.conferma=Conferma
+label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
 label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
@@ -288,9 +292,11 @@ label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
 label.crea_account=Crea Account
 label.creazione_evento=Creazione
+label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
+label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.cv=Curriculum vitae
 label.da_inserire=(non inserito)
 label.da_inserire_nel_odg=Da inserire nell'ordine del giorno
@@ -308,7 +314,10 @@ label.dashboard_referee=Referee dashboard
 label.dashboard_segreteria=Segreteria dashboard
 label.data=Data
 label.data_creazione=Data Creazione
+label.data_fine=Data fine
+label.data_inizio=Data inizio
 label.data_ultima_modifica=Data Ultima Modifica
+label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
@@ -334,6 +343,7 @@ label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
 label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
 label.denominazione_legale_login=Denominazione Legale della struttura richiedente
+label.denominazione_legale_provider=Denominazione Legale del Provider
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
 label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
@@ -342,6 +352,7 @@ label.diniego=Diniego
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
+label.docenti_relatori_tutor=Docenti/Relatori/Tutor
 label.documenti=Documenti
 label.documenti_della_domanda=Documenti della Domanda di Accreditamento
 label.domanda_accreditamento=Domanda di Accreditamento
@@ -353,6 +364,7 @@ label.domande_accreditamento=Domande di Accreditamento
 label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
 label.domande_provvisorie=Domande Provvisorie
 label.domande_standard=Domande Standard
+label.durata=Durata
 label.elabora=Elabora
 label.elimina=Elimina
 label.email=E-mail
@@ -361,6 +373,7 @@ label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
+label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
 label.esito_valutazione=Esito Valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
@@ -368,6 +381,7 @@ label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione 
 label.eventi=Eventi
 label.eventi_piano_formativo=Eventi del piano formativo
 label.evento=Evento
+label.evento_contiene_questi_contenuti=L'evento formativo prevedere i seguenti contenuti?
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
 label.evento_titolo=Evento {0}
@@ -401,6 +415,7 @@ label.help=Help
 label.home=Torna alla Home
 label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
+label.id_provider=Id del Provider
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
@@ -418,6 +433,8 @@ label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Forma
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
+label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
+label.informazioni_sede=Informazioni relative alla Sede dell'Evento
 label.inserimento_file_note=Inserimento Allegato (opzionale)
 label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cui il Provider deve completare l'integrazione
 label.inserimento_numero_verbale=Inserire il numero del Verbale della Seduta
@@ -459,6 +476,7 @@ label.iter_accreditamento=Iter Accreditamento
 label.label.rivaluta=Rivaluta
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
+label.lingua_straniera_utilizzata=Lingua straniera utilizzata
 label.list_eventi=Lista degli eventi del provider {0}
 label.listaDomandeDaInserireInODG=Lista delle Domande di Accreditamento da inserire nell'Ordine Del Giorno
 label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carico
@@ -493,6 +511,7 @@ label.lista_valutatori=Lista dei Valutatori
 label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
 label.locked=Bloccato
 label.lookup=Cerca
+label.luogo=Luogo
 label.menu_azioni=Menù Azioni
 label.menu_riepiloghi=Menù Riepiloghi
 label.mese=mese
@@ -565,6 +584,7 @@ label.note_osservazioni_integrazione=Note e Osservazioni sull'Integrazione
 label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di Rigetto
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
+label.numero_partecipanti=Numero dei partecipanti
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
@@ -618,15 +638,18 @@ label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisc
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
+label.programma_attività_formativa=Programma attività formativa
 label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
 label.provider_accreditamento=Provider:
 label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
+label.quota_partecipazione=Quota di partecipazione
 label.ragione_sociale=Ragione sociale
 label.rappresentante=Rappresentante
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
+label.razionale=Razionale
 label.recupera_password=Recupera password
 label.referee=Referee
 label.regione=Regione
@@ -644,8 +667,10 @@ label.responsabile=Responsabile
 label.responsabile_amministrativo=Responsabile Amministrativo
 label.responsabile_qualita=Responsabile della Qualità
 label.responsabile_segreteria=Responsabile di Segreteria
+label.responsabile_segreteria_organizzativa=Responsabile segreteria organizzativa
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
+label.responsabili_scientifici=Responsabili scientifici
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
@@ -672,9 +697,12 @@ label.rispondi=Rispondi
 label.risposta=Risposta
 label.risposta_a_comunicazione=Nuova Risposta alla Comunicazione
 label.risposta_del_provider=Risposta del Provider
+label.risultati_attesi=Risultati attesi
+label.risultati_attesi=Risultati attesi
 label.rivaluta=Rivaluta
 label.ruolo=Ruolo
 label.salva=Salva
+label.salva_modifiche=Salva Modifiche
 label.scadenza_valutazione=Data scadenza Valutazione
 label.scegli_file=Scegli file
 label.scelta_evento_piano_formativo=Scelta Evento del Piano Formativo da attuare
@@ -707,6 +735,7 @@ label.settoriale=Settoriale
 label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
+label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
 label.sposta=Sposta
@@ -723,14 +752,17 @@ label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipoOrganizzatore_nome=Tipologia
+label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
 label.tipo_organizzatore=Tipo Organizzatore
 label.tipo_provider=Tipo:
 label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
 label.tipologia_list=Tipologia
+label.tipologia_obiettivi_formativi=Tipologia di obiettivi formativi
 label.tipologia_sede=Tipologia Sede
 label.titolo=Titolo
+label.titolo_convegno=Titolo del Convegno
 label.titolo_programma_formativo=Titolo del programma formativo
 label.to=A:
 label.to_provider={0} ({1})
@@ -767,6 +799,8 @@ label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_precedenti=Valutazioni precedenti
 label.vedi_lista=Vedi lista
 label.vedi_tutte=Vedi tutte
+label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
+label.verifica_presenza_partecipanti=Verifica presenza partecipanti
 label.visualizza=Visualizza
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_comunicazione=Visualizza Comunicazione
@@ -781,6 +815,7 @@ label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
+label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
 message.accesso_negato=ACCESSO NEGATO
 message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
@@ -804,6 +839,7 @@ message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'u
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.errore_inserimento_numero_verbale=\u00C8 obbligatorio inserire il numero del Verbale
 message.evento_salvato=I dati dell''evento sono stati salvati successo.
+message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
@@ -846,25 +882,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
-label.salva_modifiche=Salva Modifiche
-label.conferma_evento=Conferma Evento
-label.denominazione_legale_provider=Denominazione Legale del Provider
-label.id_provider=Id del Provider
-label.evento_contiene_questi_contenuti=L'evento formativo prevedere i seguenti contenuti?
-label.codice_identificativo=Codice Identificativo
-label.informazioni_sede=Informazioni relative alla Sede dell'Evento
-label.luogo=Luogo
-message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
-label.data_inizio=Data inizio
-label.data_fine=Data fine
-label.date_intermedie=Date intermedie
-label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
-label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
-label.titolo_convegno=Titolo del Convegno
-label.numero_partecipanti=Numero dei partecipanti
-label.responsabili_scientifici=Responsabili scientifici
-label.docenti_relatori_tutor=Docenti/Relatori/Tutor
-label.programma_attività_formativa=Programma attività formativa
-label.razionale=Razionale
-label.risultati_attesi=Risultati attesi
