--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -174,6 +174,7 @@ error.xml_validation=Errore di validazione dell'XML
 error._free_msg={0}
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.xml_evento_validation_with_db=Validazione dati evento fallita
+error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
@@ -264,6 +265,7 @@ label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
 label.cogeaps=Co.Ge.A.P.S.
+label.cogeaps_report_id=Id Co.Ge.A.P.S.
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
 label.comitato_scientifico=Comitato Scientifico
@@ -539,6 +541,7 @@ label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
 label.nessuna_persona=Nessuna persona disponibile
+label.nessuna_rendicontazione_inviata=Nessuna rendicontazione inviata
 label.nessuna_risposta=Nessuna risposta
 label.nessuna_sede=Nessuna sede inserita
 label.nessuna_seduta=Non sono state trovate Sedute nel database!
@@ -633,6 +636,7 @@ label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
+label.rendicontazione_inviata=Rendicontazione inviata
 label.rendiconto=Rendiconto
 label.reportPartecipanti=Report Partecipanti
 label.reportPartecipantiCSV=File CSV caricato
@@ -811,6 +815,7 @@ message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede L
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserire_il_rendiconto=Inserire il file da elaborare!
 message.inserito=Il {0} è stato salvato con successo.
+message.invio_cogeaps_ok=Il report è stato inviato con successo
 message.invio_integrazione_success=Integrazione della Domanda di Accreditamento effettuata con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
 message.mail_inviata=Email inviata
@@ -834,6 +839,7 @@ message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è st
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata ai Referee CRECM con successo.
 message.warning=Attenzione
+message.xml_evento_validation_ok=Report importato con successo
 month.agosto=Agosto
 month.aprile=Aprile
 month.dicembre=Dicembre
