--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -291,6 +291,7 @@ label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
 label.crea_account=Crea Account
+label.crea_anagrafica=Crea Anagrafica
 label.creazione_evento=Creazione
 label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
@@ -651,6 +652,7 @@ label.provider_accreditamento=Provider:
 label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
+label.qualifica=Qualifica
 label.quota_partecipazione=Quota di partecipazione
 label.ragione_sociale=Ragione sociale
 label.rappresentante=Rappresentante
@@ -753,6 +755,7 @@ label.stato_inserimento=Stato Inserimento
 label.stato_valutazione=Stato Valutazione
 label.status=Status
 label.straniera=Straniera
+label.straniero=Straniero
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
