Ripetibili ResponsabiliScientifici e Docenti

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -458,6 +458,7 @@ label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
 label.inserisci=Inserisci
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_nuova_seduta=Nuova Seduta
+label.inserisci_persona=Inserisci Persona
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserisci_valutazione=Inserisci Valutazione
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
@@ -756,6 +757,7 @@ label.sito_internet=Sito internet
 label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
+label.sostituto=Sostituto
 label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
@@ -780,6 +782,7 @@ label.tipologia_evento=Tipologia dell'evento
 label.tipologia_list=Tipologia
 label.tipologia_obiettivi_formativi=Tipologia di obiettivi formativi
 label.tipologia_sede=Tipologia Sede
+label.titolare=Titolare
 label.titolo=Titolo
 label.titolo_convegno=Titolo del Convegno
 label.titolo_programma_formativo=Titolo del programma formativo
