EventoRES split in 3 tab

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -349,6 +349,7 @@ label.denominazione_legale=Denominazione Legale
 label.denominazione_legale_login=Denominazione Legale della struttura richiedente
 label.denominazione_legale_provider=Denominazione Legale del Provider
 label.descrizione_verifica_ricadute_formative=Descrizione verifica ricadute formativa
+label.dettaglio_attivita=Dettaglio Attività
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
 label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
@@ -358,6 +359,7 @@ label.diniego=Diniego
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
+label.docente=Docente
 label.docenti_relatori_tutor=Docenti/Relatori/Tutor
 label.documenti=Documenti
 label.documenti_della_domanda=Documenti della Domanda di Accreditamento
@@ -456,8 +458,10 @@ label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
 label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
 label.inserisci=Inserisci
+label.inserisci_attivita=Inserisci Attività
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_nuova_seduta=Nuova Seduta
+label.inserisci_pausa=Inserisci Pausa
 label.inserisci_persona=Inserisci Persona
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserisci_valutazione=Inserisci Valutazione
@@ -555,6 +559,7 @@ label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_allegato=Nessun allegato disponibile
 label.nessun_componente_comitato=Nessun componente del comitato scientifico inserito
+label.nessun_cv=Nessun CV
 label.nessun_evento_list=Non ci sono eventi!
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_caricato=Nessun File caricato
@@ -563,6 +568,8 @@ label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_messaggio_non_letto=Nessun messaggio ancora da leggere
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
+label.nessun_responsabile_registrato=Nessun Responsabile Registrato
+label.nessuna_attivita_registrata=Nessuna Attività Registrata
 label.nessuna_comunicazione_ricevuta_ancora=Non è stata ancora ricevuta nessuna Comunicazione
 label.nessuna_comunicazione_tipologia=Non ci sono Comunicazioni {0}!
 label.nessuna_disciplina=Nessuna disciplina selezionata
