Evento RES pre rilascio

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -758,6 +758,9 @@ label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la doman
 label.settimana=settimana
 label.settoriale=Settoriale
 label.sezione=Sezione
+label.sezione_1=Sezione 1
+label.sezione_2=Sezione 2
+label.sezione_3=Sezione 3
 label.si_avvale_di_partner=L’evento si avvale di partner?
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
