show WIP (grazie git tutto da capo)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -846,6 +846,7 @@ label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
+label.visualizzazione_evento=Visualisulizzazione Evento: {0}
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
