show WIP (ty git again) (mancano i ripetibili, gestione null fatta)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -144,6 +144,7 @@ error.empty=campo obbligatorio
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.formatNonAcceptedXML=Errore nel formato del file. \u00C8 consentito inviare solo file XML, P7M e CSV
 error.invalid=formato non corretto
+error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
 error.max=valore troppo lungo
 error.maxFileSize=dimensione max {0} MB
 error.min=valore troppo corto
@@ -173,7 +174,6 @@ error.stessoCf=il delegato del legale rappresentante non può avere lo stesso co
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
 error.xml_evento_validation_with_db=Validazione dati evento fallita
-error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
 error.xml_validation=Errore di validazione dell'XML
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
@@ -340,6 +340,7 @@ label.dati_legale=Dati del Legale
 label.dati_legale_login=Dati del\nLegale Rappresentante
 label.dati_non_inseriti= (dati non inseriti)
 label.dati_struttura=Dati della Struttura
+label.dato_non_inserito=Dato non inserito
 label.decreto_accreditamento=Decreto Accreditamento
 label.decreto_diniego=Decreto Diniego
 label.delega=Delega
@@ -351,6 +352,7 @@ label.denominazione_legale=Denominazione Legale
 label.denominazione_legale_login=Denominazione Legale della struttura richiedente
 label.denominazione_legale_provider=Denominazione Legale del Provider
 label.descrizione_verifica_ricadute_formative=Descrizione verifica ricadute formativa
+label.destinatari_evento=Destinatari dell'evento
 label.dettaglio_attivita=Dettaglio Attività
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
@@ -392,6 +394,7 @@ label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione 
 label.eventi=Eventi
 label.eventi_piano_formativo=Eventi del piano formativo
 label.evento=Evento
+label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevedere i seguenti contenuti?
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
@@ -669,6 +672,7 @@ label.programma_del=Programma del
 label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
 label.provider_accreditamento=Provider:
+label.provider_confermato_crediti=Il provider ha confermato i crediti formativi?
 label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
