implementata possibilità di eliminare eventi (TODO gestire logica)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -880,6 +880,7 @@ message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la S
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.errore_inserimento_numero_verbale=\u00C8 obbligatorio inserire il numero del Verbale
+message.evento_elimitato=Evento eliminato con sucesso
 message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
