update gestione invio report xml cogeaps

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -137,10 +137,12 @@ error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Sc
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
+error.elaborazione_pendente=Invio non concesso.\u00c8 gi\u00e0 presente un invio pendente in fase di elaborazione
 error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
+error.file_non_firmato=Il file deve essere firmato digitalmente
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.formatNonAcceptedXML=Errore nel formato del file. \u00C8 consentito inviare solo file XML, P7M e CSV
 error.invalid=formato non corretto
@@ -271,7 +273,6 @@ label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
 label.codice_identificativo=Codice Identificativo
 label.cogeaps=Co.Ge.A.P.S.
-label.cogeaps_report_id=Id Co.Ge.A.P.S.
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
 label.comitato_scientifico=Comitato Scientifico
@@ -322,6 +323,7 @@ label.data=Data
 label.data_creazione=Data Creazione
 label.data_fine=Data fine
 label.data_inizio=Data inizio
+label.data_invio=Data invio
 label.data_ultima_modifica=Data Ultima Modifica
 label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
@@ -731,6 +733,7 @@ label.risposta=Risposta
 label.risposta_a_comunicazione=Nuova Risposta alla Comunicazione
 label.risposta_del_provider=Risposta del Provider
 label.risultati_attesi=Risultati attesi
+label.risultato=Risultato
 label.risultato_atteso=Risultato Atteso
 label.rivaluta=Rivaluta
 label.ruolo=Ruolo
