commit che è andata via la luce (WIP FSC)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -402,6 +402,7 @@ label.evento_sponsorizzato_radio=L’evento è sponsorizzato?
 label.evento_titolo=Evento {0}
 label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Segreteria ECM e al CO.Ge.A.P.S. e generazione attestato di partecipazione
 label.facoltativo=facoltativo
+label.fasi_azioni_ruoli=Fasi/Azioni/Ruoli coninvolti
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
 label.fax=FAX
