--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -353,6 +353,7 @@ label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
 label.denominazione_legale_login=Denominazione Legale della struttura richiedente
 label.denominazione_legale_provider=Denominazione Legale del Provider
+label.descrizione_del_progetto=Descrizione del progetto e rilevanza formativa
 label.descrizione_verifica_ricadute_formative=Descrizione verifica ricadute formativa
 label.destinatari_evento=Destinatari dell'evento
 label.dettaglio_attivita=Dettaglio Attività
@@ -441,6 +442,7 @@ label.in_preavviso_rigetto=In preavviso di rigetto
 label.in_richiesta_integrazione=In Richiesta di Integrazione
 label.in_scadenza=In scadenza nei prossimi 30 giorni
 label.incarico_presso_la_struttura=Incarico presso la struttura
+label.indicatore_efficacia=Indicatori per misurare l’efficacia formativa del progetto
 label.indietro=Indietro
 label.indirizzo=Indirizzo
 label.indirizzo_sede={0} ({1})
@@ -737,6 +739,7 @@ label.risultati_attesi=Risultati attesi
 label.risultato=Risultato
 label.risultato_atteso=Risultato Atteso
 label.rivaluta=Rivaluta
+label.ruoli_coinvolti=Verifica Apprendimento partecipanti
 label.ruolo=Ruolo
 label.salva=Salva
 label.salva_modifiche=Salva Modifiche
