parametrizzato lo show

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -739,7 +739,7 @@ label.risultati_attesi=Risultati attesi
 label.risultato=Risultato
 label.risultato_atteso=Risultato Atteso
 label.rivaluta=Rivaluta
-label.ruoli_coinvolti=Verifica Apprendimento partecipanti
+label.ruoli_coinvolti=Ruoli coinvolti
 label.ruolo=Ruolo
 label.salva=Salva
 label.salva_modifiche=Salva Modifiche
