--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -241,6 +241,7 @@ label.atto_delega=Atto di delega
 label.attuazione_evento=Attuazione
 label.autorizzazione_privacy=Dichiaro ai sensi e per gli effetti del D.lgs. n. 196/2003, di essere in possesso del consenso scritto alla pubblicazione dei dati personali da parte dei soggetti
 label.avanti=avanti
+label.azione=Azione
 label.azioni=Azioni
 label.benvenuto=Benvenuto
 label.benvenuto_provider=Benvenuto {0}!
@@ -405,6 +406,7 @@ label.evento_sponsorizzato_radio=L’evento è sponsorizzato?
 label.evento_titolo=Evento {0}
 label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Segreteria ECM e al CO.Ge.A.P.S. e generazione attestato di partecipazione
 label.facoltativo=facoltativo
+label.fase=Fase
 label.fasi_azioni_ruoli=Fasi/Azioni/Ruoli coninvolti
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
@@ -542,6 +544,7 @@ label.mese=mese
 label.messaggi=Messaggi
 label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
+label.metodi_di_lavoro=Metodi di Lavoro
 label.metodologia_didattica=Metodologia Didattica
 label.mittente=Mittente
 label.modelli_allegato=Modelli di allegato
@@ -739,6 +742,7 @@ label.risultati_attesi=Risultati attesi
 label.risultato=Risultato
 label.risultato_atteso=Risultato Atteso
 label.rivaluta=Rivaluta
+label.ruoli=Ruoli
 label.ruoli_coinvolti=Ruoli coinvolti
 label.ruolo=Ruolo
 label.salva=Salva
@@ -796,6 +800,7 @@ label.straniero=Straniero
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
+label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
