--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -304,7 +304,9 @@ label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
+label.crediti_formativi_attribuiti_dal_utente=Crediti formativi attribuiti dal''utente
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
+label.crediti_formativi_proposti_dal_sistema=Crediti formativi proposti dal sistema
 label.cv=Curriculum vitae
 label.da_inserire=(non inserito)
 label.da_inserire_nel_odg=Da inserire nell'ordine del giorno
@@ -546,6 +548,7 @@ label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
 label.metodi_di_lavoro=Metodi di Lavoro
 label.metodologia_didattica=Metodologia Didattica
+label.metodologie_didattiche=Metodologie Didattiche
 label.mittente=Mittente
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
@@ -642,6 +645,8 @@ label.opzione_selezione_domanda=Domanda {0}, Provider: {1} ({2})
 label.opzione_selezione_seduta=Seduta del {0} - ore: {1}
 label.ora=Ora
 label.orario=Orario
+label.orario_fine=Orario Fine
+label.orario_inizio=Orario Inizio
 label.ore_attivita=Ore Attività
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
@@ -754,6 +759,7 @@ label.scelta_evento_riedizione=Scelta Evento da rieditare
 label.scelta_modalita=Scelta della modalità di inserimento
 label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
 label.scheda_provider=Scheda provider
+label.sede=Sede
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
