Evento FSC rilascio demo 19/10/2016

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -414,12 +414,13 @@ label.evento_sponsorizzato_infanzia_radio=L’evento è sponsorizzato da aziende
 label.evento_sponsorizzato_radio=L’evento è sponsorizzato?
 label.evento_titolo=Evento {0}
 label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Segreteria ECM e al CO.Ge.A.P.S. e generazione attestato di partecipazione
-label.eventofsc_tipologiaGruppo=Tipologia gruppo
-label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
 label.eventofsc_ottenutoComitatoEtico=Ottenuto il parere del comitato etico?
+label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
+label.eventofsc_tipologiaGruppo=Tipologia gruppo
 label.facoltativo=facoltativo
 label.fase=Fase
-label.fasi_azioni_ruoli=Fasi/Azioni/Ruoli coninvolti
+label.fasi=Fasi
+label.fasi_azioni_ruoli=Fasi/Azioni/Ruoli coinvolti
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
 label.fax=FAX
